--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <a
             href="https://www.youtube.com/channel/UCRmkZGtLx611Hb2xGdssdCw"
             target="_blank"
-            >Increver-se no meu canal</a
+            >Increva-se no meu canal</a
           >
         </li>
         <li>
